2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* NSDictionary.cs:
	  Implement NSDictionary.CopyTo()

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSSet.cs:
	* NSDate.cs:
	* NSData.cs:
	* NSArray.cs:
	* NSString.cs:
	* NSObject.cs:
	* NSNumber.cs:
	* NSDictionary.cs:
	* ASCIIPropertyListParser.cs:
	* BinaryPropertyListParser.cs:
	* BinaryPropertyListWriter.cs:
	  Added all missing documentation for public methods.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* NSDate.cs:
	* NSObject.cs:
	* NSNumber.cs:
	* ASCIIPropertyListParser.cs:
	* BinaryPropertyListParser.cs:
	  Remove unused variables and disable warnings that we know
	  are innocuous.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	  Added ZIPing release.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	  Added automatic HTML and MonoDoc documentation generation
	  for Release.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	  Add ChangeLog so it is copied on build.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	  Added README.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	  Added MIT License file.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* ASCIIPropertyListParser.cs:
	  Remove redundant items.
	Correct same ASCII exceptionfallback issue that appeared in
	  NSString.

	* UID.cs:
	* NSSet.cs:
	* NSDate.cs:
	* NSData.cs:
	* NSArray.cs:
	* NSObject.cs:
	* NSNumber.cs:
	* NSString.cs:
	* NSDictionary.cs:
	* PropertyListParser.cs:
	* XmlPropertyListParser.cs:
	* BinaryPropertyListWriter.cs:
	* BinaryPropertyListParser.cs:
	  Remove redundant items.

2015-02-20  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSSet.cs:
	* NSDate.cs:
	* NSData.cs:
	* NSArray.cs:
	* NSString.cs:
	* NSObject.cs:
	* NSNumber.cs:
	* NSDictionary.cs:
	* PropertyListParser.cs:
	* XmlPropertyListParser.cs:
	* ASCIIPropertyListParser.cs: